--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "antd": "^5.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
